--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -31,11 +31,11 @@
     "luxury": "فخمة",
     "luxury2": "الفخامة",
     "commission_note": "يتم خصم مبلغ العمولة عند دفع المشتري",
-    "pourquoi_choisir": "لماذا تختار شوب<span class=\"color\">إن</span>",
+    "pourquoi_choisir": "لماذا تختار شوب<span class=\"color\">ين</span>",
     "protection_et_securite": "الحماية والأمان",
-    "protection_description": "يوفر لك شوب<span class=\"color\">إن</span> أدوات عملية مثل الرسائل الخاصة ونظام الإبلاغ لضمان بيئة آمنة ومعاملات موثوقة.",
+    "protection_description": "يوفر لك شوب<span class=\"color\">ين</span> أدوات عملية مثل الرسائل الخاصة ونظام الإبلاغ لضمان بيئة آمنة ومعاملات موثوقة.",
     "experience_agreable": "تجربة مريحة!",
-    "experience_description": "سواء كنت تشتري أو تبيع، ستكون تجربتك على شوب<span class=\"color\">إن</span> دائمًا مميزة من خلال خدمة استثنائية وبساطة لا مثيل لها ورضا مضمون.",
+    "experience_description": "سواء كنت تشتري أو تبيع، ستكون تجربتك على شوب<span class=\"color\">ين</span> دائمًا مميزة من خلال خدمة استثنائية وبساطة لا مثيل لها ورضا مضمون.",
     "livraison_porte_a_porte": "توصيل من الباب إلى الباب",
     "livraison_description": "سيتوجه مندوب التوصيل مباشرة إلى باب منزلك لاستلام أو توصيل العناصر الخاصة بك. لا مزيد من المتاعب مع البيع عن بُعد!",
     "generales": "عامة",
@@ -51,7 +51,7 @@
      "empty_cart": "لا توجد عناصر في سلتك!",
      "profile_photo_validation": "نود إعلامك أن صورة الملف الشخصي الخاصة بك ستخضع لعملية التحقق، والتي قد تستغرق حتى 24 ساعة كحد أقصى قبل الموافقة عليها.",
     "thank_you_message": "نشكركم على صبركم وتفهمكم.",
-    "nouveau_sur_shopin_luxury": "جديد على شوب<span class=\"color\">إن</span>",
+    "nouveau_sur_shopin_luxury": "جديد على شوب<span class=\"color\">ين</span>",
     "sort_by": "ترتيب حسب",
     "low_to_high": "السعر من الأقل إلى الأعلى",
     "high_to_low": "السعر من الأعلى إلى الأقل",
@@ -66,7 +66,7 @@
     "used": "مستعمل",
     "all_items_in_category": "جميع العناصر في هذه الفئة",
     "back_to_subcategories": "العودة إلى قائمة الفئات الفرعية",
-    "login_to_sell_and_buy": "تسجيل الدخول للبيع والشراء على شوب<span class=\"color\">إن</span>",
+    "login_to_sell_and_buy": "تسجيل الدخول للبيع والشراء على شوب<span class=\"color\">ين</span>",
     "nom": "الاسم",
   "prenom": "اللقب",
   "pseudonyme": "الاسم المستعار",
@@ -124,7 +124,7 @@
     "Ventes": "مبيعات",
     "Annonces": "إعلانات",
     "Articles similaires": "عناصر مشابهة",
-    "title2": "منتجات من <span class=\"ft-bold\">الشوب<span class=\"color\">إن</span>ر</span>",
+    "title2": "منتجات من <span class=\"ft-bold\">الشوب<span class=\"color\">ين</span>ر</span>",
     "currency": "درهم",
     "Thank you for your report!": "شكراً لتقاريرك!",
   "We will review this ad as soon as possible.": "سوف نقوم بمراجعة هذا الإعلان في أقرب وقت ممكن.",
@@ -172,9 +172,9 @@
     "step_3_title": "استلم أموالك بسرعة",
     "step_3_description": "بعد 24 ساعة من التسليم الناجح، سيتم دفع المبلغ المتفق عليه وفقاً للشروط المتفق عليها.",
     "step_4_title": "الكرة في ملعبك!",
-    "step_4_description": "انضم إلى شوب<span class=\"color\">إن</span> اليوم، وبيع منتجاتك، واكتشف الكنوز الفريدة التي يمكنك شراؤها.",
+    "step_4_description": "انضم إلى شوب<span class=\"color\">ين</span> اليوم، وبيع منتجاتك، واكتشف الكنوز الفريدة التي يمكنك شراؤها.",
     "explore_your_way_title": "استكشف بالطريقة التي تناسبك",
-    "explore_your_way_description": "استخدم بحثنا متعدد المعايير لتحديد رغباتك أو دع نفسك تتفاجأ أثناء تصفح إعلانات الآخرين من شوب<span class=\"color\">إن</span> حتى تجد المنتج المثالي.",
+    "explore_your_way_description": "استخدم بحثنا متعدد المعايير لتحديد رغباتك أو دع نفسك تتفاجأ أثناء تصفح إعلانات الآخرين من شوب<span class=\"color\">ين</span> حتى تجد المنتج المثالي.",
     "add_to_favorites_title": "أضف إلى مفضلتك بنقرة واحدة",
     "add_to_favorites_description": "هل وجدت منتجاً يعجبك؟ اضغط على القلب الصغير لإضافته مباشرة إلى قائمة المفضلة الخاصة بك ولا تفوت فرصة مشاهدة منتجك المفضل.",
     "validate_cart_title": "أتمم طلبك في لحظة",
@@ -183,34 +183,34 @@
     "receive_package_description": "بمجرد تأكيد طلبك، سيقوم أحد السائقين بتسليم المنتج مباشرة إلى باب منزلك. شوب<span class=\"color\">إن</span> يجعل التسوق أكثر راحة ومتعة!",
     "general_conditions_title": "الشروط العامة",
     "registration_title": "التسجيل على الموقع:",
-    "registration_description": "عند التسجيل في موقع شوب<span class=\"color\">إن</span>، يجب على المستخدم ملء نموذج يحتوي على اسمه الأول، واسم العائلة، واسم المستخدم، والبريد الإلكتروني، ورقم الهاتف، وتاريخ الميلاد. يمكن للمستخدم تعديل أو حذف حسابه في أي وقت.",
-    "seller_commission_intro": "يوافق البائع على أن يحتفظ شوب<span class=\"color\">إن</span> بعمولة على السعر الإجمالي للمنتج كما يلي:",
-    "luxury_brand_commission": "العلامة التجارية الفاخرة (شوب<span class=\"color\">إن</span> Luxury): 10% من سعر المنتج",
+    "registration_description": "عند التسجيل في موقع شوب<span class=\"color\">ين</span>، يجب على المستخدم ملء نموذج يحتوي على اسمه الأول، واسم العائلة، واسم المستخدم، والبريد الإلكتروني، ورقم الهاتف، وتاريخ الميلاد. يمكن للمستخدم تعديل أو حذف حسابه في أي وقت.",
+    "seller_commission_intro": "يوافق البائع على أن يحتفظ شوب<span class=\"color\">ين</span> بعمولة على السعر الإجمالي للمنتج كما يلي:",
+    "luxury_brand_commission": "العلامة التجارية الفاخرة (شوب<span class=\"color\">ين</span> Luxury): 10% من سعر المنتج",
     "other_category_commission": "أي فئة أخرى: 7% من سعر المنتج",
-    "delivery_fees_not_included": "لا تشمل رسوم التوصيل في قاعدة حساب العمولة. بعد استلام المشتري للمنتج، سيقوم شوب<span class=\"color\">إن</span> بدفع سعر المنتج للبائع مخصومًا منه العمولة في غضون 3 أيام. للحصول على المدفوعات، يجب على البائع تقديم إثبات هويته وبياناته البنكية مع صورة للتحقق الضروري (CIN وRIB).",
+    "delivery_fees_not_included": "لا تشمل رسوم التوصيل في قاعدة حساب العمولة. بعد استلام المشتري للمنتج، سيقوم شوب<span class=\"color\">ين</span> بدفع سعر المنتج للبائع مخصومًا منه العمولة في غضون 3 أيام. للحصول على المدفوعات، يجب على البائع تقديم إثبات هويته وبياناته البنكية مع صورة للتحقق الضروري (CIN وRIB).",
     "confidentiality_title": "3. السرية:",
-    "confidentiality_content": "يقوم شوب<span class=\"color\">إن</span> بجمع وتخزين واستخدام بعض البيانات الشخصية للمستخدمين (الاسم الأول، الاسم الأخير، رقم الهاتف، المدينة، والبريد الإلكتروني) بالإضافة إلى بيانات الموقع الجغرافي للمستخدمين. يضمن شوب<span class=\"color\">إن</span> حماية المعلومات الشخصية للمستخدمين ضد أي أنشطة غير قانونية.",
+    "confidentiality_content": "يقوم شوب<span class=\"color\">ين</span> بجمع وتخزين واستخدام بعض البيانات الشخصية للمستخدمين (الاسم الأول، الاسم الأخير، رقم الهاتف، المدينة، والبريد الإلكتروني) بالإضافة إلى بيانات الموقع الجغرافي للمستخدمين. يضمن شوب<span class=\"color\">ين</span> حماية المعلومات الشخصية للمستخدمين ضد أي أنشطة غير قانونية.",
     "cookies_title": "4. الكوكيز:",
-    "cookies_content": "يستخدم الموقع ملفات تعريف الارتباط لتمييز المستخدمين / الزوار عن المستخدمين الآخرين للموقع لمساعدة شوب<span class=\"color\">إن</span> في تحسين تجربتهم أثناء تصفح الموقع.",
+    "cookies_content": "يستخدم الموقع ملفات تعريف الارتباط لتمييز المستخدمين / الزوار عن المستخدمين الآخرين للموقع لمساعدة شوب<span class=\"color\">ين</span> في تحسين تجربتهم أثناء تصفح الموقع.",
     "articles_for_sale_title": "5. المقالات للبيع:",
     "articles_for_sale_content": "يتعهد البائع/البائعة بضمان أن أي عنصر معروض للبيع خالٍ من العيوب (بقع، ثقوب أو تمزقات...). يحق للمشتري/المشتريّة الذي يتلقى منتجًا في هذه الحالة إرجاعه. يُحظر إعادة بيع المنتجات المقلدة أو المحظورة من قبل القانون. يتعهد البائع/البائعة بتوفير صور حقيقية للمنتج المعروض للبيع. يجب أن تتطابق وصف المنتج مع خصائصه الفعلية. لشركة شوب<span class=\"color\">إن</span> كامل الحق في طلب من البائع/البائعة تغيير أو حذف الإعلان أو إخباره بأن شوب<span class=\"color\">إن</span> ستقوم بذلك مباشرة في حالة حدوث خطأ (مثال: خطأ في الفئة).",
 
     "return_title": "6. الإرجاع:",
     "return_content": "في حالة فشل التسليم يجب أن يكون البائع/البائعة متاحًا لاستلام المنتج المرتجع.",
-    "luxury_title": "7. شوب<span class=\"color\">إن</span> Luxury:",
-    "luxury_description": "يجب أن يتجاوز العنصر الذي ينتمي إلى فئة شوب<span class=\"color\">إن</span> LUXURY :",
+    "luxury_title": "7. شوب<span class=\"color\">ين</span> Luxury:",
+    "luxury_description": "يجب أن يتجاوز العنصر الذي ينتمي إلى فئة شوب<span class=\"color\">ين</span> LUXURY :",
     "luxury_price_condition": "أكثر من 800",
     "luxury_authentication_condition": "يجب أن يتم التحقق من صحة العنصر قبل تسليمه للمشتري",
     "luxury_category_condition": "سيتم:",
     "luxury_symbol_authentication": "التحقق من صحته بواسطة رمز",
-    "luxury_sale_steps": "خطوات بيع عنصر ينتمي إلى فئة شوب<span class=\"color\">إن</span> LUXURY:",
+    "luxury_sale_steps": "خطوات بيع عنصر ينتمي إلى فئة شوب<span class=\"color\">ين</span> LUXURY:",
     "luxury_publish_item": "نشر العنصر الفاخر للبيع",
     "luxury_purchase_confirmation": "بعد تأكيد الشراء، سيقوم فريقنا بإبلاغك بالبيع وسيتم تحديد موعد للاستلام",
     "luxury_item_authentication": "سيتم التحقق من صحة العنصر من قبل فريقنا",
     "luxury_item_delivery": "إذا كان العنصر أصليًا، سيتم تسليمه خلال 3 أيام",
     "luxury_payment_confirmation": "بعد استلام العنصر من المشتري/المشتريّة، سيتم تحويل الدفع إلى حسابك خلال 24 ساعة",
-    "luxury_return_policy": "سياسة الإرجاع لمنتجات فئة شوب<span class=\"color\">إن</span> LUXURY:",
-    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">إن</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">إن</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة.",
+    "luxury_return_policy": "سياسة الإرجاع لمنتجات فئة شوب<span class=\"color\">ين</span> LUXURY:",
+    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">ين</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">ين</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة.",
      "Mode voyage": "وضع السفر",
      "keyword": "الكلمة المفتاحية",
      "status": "الحالة",
@@ -251,7 +251,7 @@
     "no_items_found": "لم يتم العثور على أي عنصر وفقًا لمعايير البحث هذه.",
     "reduce_price": "خفض السعر",
   "current_price": "السعر الحالي",
-  "shopin_percentage": "نسبة شوب<span class=\"color\">إن</span>",
+  "shopin_percentage": "نسبة شوب<span class=\"color\">ين</span>",
   "ad": "الإعلان:",
   "new_reduced_price": "السعر الجديد بعد التخفيض:",
   "less_than_price": "أقل من",
@@ -319,11 +319,11 @@
   "Shopiners": "شوبينرز",
   "message.ad_disliked": "تم إلغاء الإعجاب بالإعلان",
   "message.ad_liked": "تم الإعجاب بالإعلان",
-  "about.shopin": "حول شوب<span class=\"color\">إن</span>",
-  "welcome.shopin": "مرحبًا بك في عالم شوب<span class=\"color\">إن</span>، المنصة التي تُغير عاداتك في الشراء والبيع. هنا، كل عنصر يروي قصة، وكل عملية شراء تُعد فرصة للمشاركة في حركة عصرية ومسؤولة.",
-  "why.shopin": "لماذا تختار شوب<span class=\"color\">إن</span>؟ لأننا لسنا مجرد سوق إلكتروني، بل نحن مجتمع يقدّر احتياجاتك، ورغباتك، وتأثيرك. استكشف مجموعة متنوعة من المنتجات الجديدة والمستعملة، واكتشف قطعًا نادرة، وبِع أغراضك بكل سهولة.",
-  "join.shopin": "بانضمامك إلى شوب<span class=\"color\">إن</span>، فإنك تتبنى أسلوب استهلاك أذكى وأكثر استدامة. تساهم في تقليل الهدر مع اكتشاف كنوز فريدة تعبّر عن ذوقك وقيمك.",
-  "call.to.action": "لا تترك أغراضك غير المستعملة مكدسة في منزلك — حوّلها إلى دخل. وللباحثين عن الصفقات الرائعة، اكتشافك المفضل التالي ينتظرك بالفعل على شوب<span class=\"color\">إن</span>. انضم إلينا اليوم وكن <span class='color'>شوبينر</span>، وكن جزءًا من تغيير إيجابي وعملي ومفيد!",
+  "about.shopin": "حول شوب<span class=\"color\">ين</span>",
+  "welcome.shopin": "مرحبًا بك في عالم شوب<span class=\"color\">ين</span>، المنصة التي تُغير عاداتك في الشراء والبيع. هنا، كل عنصر يروي قصة، وكل عملية شراء تُعد فرصة للمشاركة في حركة عصرية ومسؤولة.",
+  "why.shopin": "لماذا تختار شوب<span class=\"color\">ين</span>؟ لأننا لسنا مجرد سوق إلكتروني، بل نحن مجتمع يقدّر احتياجاتك، ورغباتك، وتأثيرك. استكشف مجموعة متنوعة من المنتجات الجديدة والمستعملة، واكتشف قطعًا نادرة، وبِع أغراضك بكل سهولة.",
+  "join.shopin": "بانضمامك إلى شوب<span class=\"color\">ين</span>، فإنك تتبنى أسلوب استهلاك أذكى وأكثر استدامة. تساهم في تقليل الهدر مع اكتشاف كنوز فريدة تعبّر عن ذوقك وقيمك.",
+  "call.to.action": "لا تترك أغراضك غير المستعملة مكدسة في منزلك — حوّلها إلى دخل. وللباحثين عن الصفقات الرائعة، اكتشافك المفضل التالي ينتظرك بالفعل على شوب<span class=\"color\">ين</span>. انضم إلينا اليوم وكن <span class='color'>شوبينر</span>، وكن جزءًا من تغيير إيجابي وعملي ومفيد!",
   "Panier": "عربة التسوق",
   "Adresse de livraison": "عنوان التوصيل",
   "Paiement": "الدفع",
@@ -349,7 +349,7 @@
   "payment_shipping": "طريقة الدفع والتوصيل",
   "cash_on_delivery": "الدفع عند الاستلام",
 "cash_on_delivery_info": "تدفع عند الاستلام (في العنوان الذي تختاره) وتتلقى طلبك بأمان.",
-"terms_notice": "بمتابعة طلبك، فإنك تقبل <span data-toggle=\"modal\" data-target=\"#conditions\" class=\"color cursor\"><b>الشروط والأحكام</b></span> الخاصة بـ <b style=\"color: black\">شوب<span class=\"color\">إن</span></b>.",
+"terms_notice": "بمتابعة طلبك، فإنك تقبل <span data-toggle=\"modal\" data-target=\"#conditions\" class=\"color cursor\"><b>الشروط والأحكام</b></span> الخاصة بـ <b style=\"color: black\">شوب<span class=\"color\">ين</span></b>.",
 "back_to_addresses": "العودة إلى عناوين التوصيل",
 "thank_you": "شكرًا على طلبك",
 "confirmation_message": "ستتلقى بريدًا إلكترونيًا يحتوي على ملخص لطلبك.",
