fix-add-favorites

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -13,7 +13,7 @@
     "my_purchases": "My purchases",
     "my_cart": "My cart",
     "my_favorites": "My favorites",
-    "my_liked": "My liked items",
+    "my_liked": "My favorites",
     "notifications": "Notifications",
     "my_account": "My account",
     "logout": "Log out",
