--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -13,7 +13,7 @@
     "my_sales": "Mes ventes",
     "my_purchases": "Mes achats",
     "my_cart": "Mon panier",
-    "my_favorites": "Mes coups de coeur",
+    "my_favorites": "Mes favoris",
     "my_liked": "Mes favoris",
     "notifications": "Notifications",
     "my_account": "Mon compte",
